Fix overflow of question series selection button label

--- a/src/app/presentation/bars/control-bar/control-bar.component.scss
+++ b/src/app/presentation/bars/control-bar/control-bar.component.scss
@@ -143,11 +143,8 @@ $logo-width: 120px;
   margin: 2px 0 0;
 }
 
-.group-button {
+.group-button-label {
   max-width: 140px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .full-height {
